# Anthropic-Google-Co-Innovation

./: .gitignore  Claude-VAI-gen.py  Claude-VAI.docx  README.md
01-tutorials/: README.md
01-tutorials/claude-code-vertex-gcp/: DEPLOYMENT-GUIDE.md  deploy.ipynb
02-quick-starts/: README.md
03-demos/: README.md
03-demos/claude-code-vertex-gcp/: TEST-AND-DEMO-PLAN.md
03-demos/deal-desk-agent/: .env.example  .gitignore  DESIGN.md  README.md
03-demos/deal-desk-agent/agent_deploy/: .env.example  tools.py
03-demos/deal-desk-agent/backend/: main.py
03-demos/deal-desk-agent/backend/agents/: agent_card.json
03-demos/deal-desk-agent/computer-use/: agent_server.py
03-demos/deal-desk-agent/deploy/: agent_engine_deploy.py
03-demos/deal-desk-agent/frontend/: Dockerfile  entrypoint.sh  index.html
03-demos/deal-desk-agent/frontend/public/: config.js.template
03-demos/deal-desk-agent/frontend/src/: App.jsx
04-best-practice-guides/: README.md
04-best-practice-guides/claude-code-vertex-gcp/: ARCHITECTURE.md  COSTS.md  ENGINEERING-DESIGN.md  TROUBLESHOOTING.md
05-solution-accelerators/: README.md
05-solution-accelerators/claude-code-vertex-gcp/: CONTRIBUTING.md  CUSTOMER-RUNBOOK.md  HANDOVER-PACKET.md  INSTALL.sh  INSTALLATION.md  NOTICE  README.md  config.example.yaml
05-solution-accelerators/claude-code-vertex-gcp/dashboard/: Dockerfile  app.py  requirements.txt
05-solution-accelerators/claude-code-vertex-gcp/dashboard/static/: index.html  styles.css
05-solution-accelerators/claude-code-vertex-gcp/dev-portal/: Dockerfile  README.md  default.conf.template
05-solution-accelerators/claude-code-vertex-gcp/dev-portal/public/: index.html  styles.css
05-solution-accelerators/claude-code-vertex-gcp/docs/: README.md  claude-code-vertex-gcp-engineering-design.md  claude-code-vertex-gcp-user-guide.md
05-solution-accelerators/claude-code-vertex-gcp/gateway/: Dockerfile  README.md  requirements.txt
05-solution-accelerators/claude-code-vertex-gcp/gateway/app/: __init__.py  auth.py  headers.py  logging_config.py  main.py  model_policy.py  proxy.py  rate_limit.py  token_limit.py  token_validation.py
05-solution-accelerators/claude-code-vertex-gcp/gateway/tests/: __init__.py  conftest.py  test_model_policy.py  test_proxy.py  test_rate_limit.py  test_token_limit.py  test_token_validation.py
05-solution-accelerators/claude-code-vertex-gcp/mcp-gateway/: ADD_YOUR_OWN_TOOL.md  Dockerfile  README.md  pyproject.toml  server.py  token_validation.py
05-solution-accelerators/claude-code-vertex-gcp/mcp-gateway/tools/: __init__.py  gateway_traffic_summary.py  gcp_project_info.py  list_cloud_run_services.py  recent_gateway_errors.py
05-solution-accelerators/claude-code-vertex-gcp/observability/: log-queries.md  looker-studio-template.md
05-solution-accelerators/claude-code-vertex-gcp/scripts/: deploy-dev-portal.sh  deploy-dev-vm.sh  deploy-glb.sh  deploy-llm-gateway.sh  deploy-mcp-gateway.sh  deploy-observability.sh  deploy.sh  developer-setup.sh  e2e-test.sh  pre-deploy-check.sh  preflight.sh  seed-demo-data.sh  setup-looker-studio.sh  teardown.sh  validate-glb-demo.sh  verify-dashboard-traffic.sh
05-solution-accelerators/claude-code-vertex-gcp/scripts/lib/: common.sh  mcp_test.py  regions.sh
05-solution-accelerators/claude-code-vertex-gcp/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
05-solution-accelerators/claude-code-vertex-gcp/terraform/modules/dev_portal/: main.tf  outputs.tf  variables.tf
05-solution-accelerators/claude-code-vertex-gcp/terraform/modules/dev_vm/: main.tf  outputs.tf  startup.sh.tpl  variables.tf
05-solution-accelerators/claude-code-vertex-gcp/terraform/modules/glb/: main.tf  outputs.tf  variables.tf
05-solution-accelerators/claude-code-vertex-gcp/terraform/modules/llm_gateway/: main.tf  outputs.tf  variables.tf
05-solution-accelerators/claude-code-vertex-gcp/terraform/modules/mcp_gateway/: main.tf  outputs.tf  variables.tf
05-solution-accelerators/claude-code-vertex-gcp/terraform/modules/network/: main.tf  outputs.tf  variables.tf
05-solution-accelerators/deal-desk-agent-deploy/: README.md  colab_deploy.ipynb
(+3 files in other folders)
